spacing issue, mobile responsive done

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -6430,6 +6430,16 @@ input.dateselect {
     margin-top: -2rem;
   }
 
+  .profile-tabs {
+    height: 50px !important;
+    margin-top: 10px !important;
+  } 
+
+
+
+
+
+
   .pprofile1 {
     padding: 0px;
   }
